# fine_tuning

./: .gitignore  README.md
fine_tuning_proj/: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
fine_tuning_proj/app/: app.py
fine_tuning_proj/docs/: mkdocs.yml
fine_tuning_proj/docs/docs/: index.md
fine_tuning_proj/fine_tuning_proj/: __init__.py  config.py  dataset.py  features.py  plots.py  utils.py
fine_tuning_proj/fine_tuning_proj/modeling/: predict.py  train.py
fine_tuning_proj/notebooks/: 1.0-initial-experiment.ipynb
