[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fine_tuning_proj"
version = "0.0.1"
description = "lab1 machine learning"
authors = [
  { name = "Kristina" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.9.6"


[tool.ruff]
line-length = 99
src = ["fine_tuning_proj"]
include = ["pyproject.toml", "fine_tuning_proj/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fine_tuning_proj"]
force-sort-within-sections = true

